--- a/english_exams.html
+++ b/english_exams.html
@@ -324,7 +324,7 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
-                            <h2>EXAMINATIONS</h2>
+                            <h2>EXAMINATIONAL</h2>
                             <h2>SERVICES</h2>
                         </div>
                     </div>
@@ -761,7 +761,7 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
-                            <h2>EXAMINATIONS</h2>
+                            <h2>EXAMINATIONAL</h2>
                             <h2>PRODUCTS</h2>
                         </div>
                     </div>
