--- a/archives.html
+++ b/archives.html
@@ -324,7 +324,7 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
-                            <h2>ARABIC ARCHIVES</h2>
+                            <h2>ARABIC DOWNLOADS</h2>
                         </div>
                     </div>
                 </div>
@@ -760,7 +760,7 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
-                            <h2>ENGLISH ARCHIVES</h2>
+                            <h2>ENGLISH DOWNLOADS</h2>
                         </div>
                     </div>
                 </div>
