--- a/contactus.html
+++ b/contactus.html
@@ -129,16 +129,11 @@
                         <div class="row">
                             <div class="col-xl-6 col-lg-7 col-md-12">
                                 <div class="hero__caption">
-                                    <h1 data-animation="fadeInLeft" data-delay="0.2s">
-                                        INTEGRATED EDUCATIONAL
-                                        <br>
-                                        SERVICES AND PRODUCTS
-                                    </h1>
+                                     <h1 data-animation="fadeInLeft" data-delay="0.2s">INTEGRATED NATIONAL EDUCATIONAL <br> MANAGEMENT INFORMATION INSTITUTIONS</h1>
                                     <p data-animation="fadeInLeft" data-delay="0.4s" style="text-align: justify;">
-                                        Please feel free to send email form below, 
-                                        if you need any further information about our products and services.
-                                        Please let us know if you need any help.Follow us on our social media.
-                                    </p>
+                                        Online systems are the best tool to manage educational
+                                        institutions efficiently and effectively.
+                                    </P>
                                     <!-- <a href="Request.html" class="btn hero-btn" data-animation="fadeInLeft" data-delay="0.7s">Request</a> -->
                                     <!-- <li class="button-header"><a href="Request.html" class="btn btn3">Request</a></li> -->
                                 </div>
