--- a/lognIn.html
+++ b/lognIn.html
@@ -49,7 +49,7 @@
                 <div class="logo-login">
                     <a href="index.html"><img src="assets/img/logo/loder.png" alt=""></a>
                 </div>
-                <h2>LOGIN</h2>
+                <h2>MAANDEEQ</h2>
                 <div class="form-input">
                     <label for="name">USER EMAIL:</label>
                     <input  type="email" name="UserEmail" placeholder="USER EMAIL............." required>
