--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                 <div class="right-content3">
                     <!-- img -->
                     <div class="right-img">
-                        <img src="assets/img/education.png" alt="">
+                        <img src="assets/img/maandeeq.png" alt="">
                     </div>
                 </div>
                 <div class="left-content3">
@@ -391,7 +391,7 @@
                 <div class="right-content3">
                     <!-- img -->
                     <div class="right-img">
-                        <img src="assets/img/education.png" alt="">
+                        <img src="assets/img/maandeeq.png" alt="">
                     </div>
                 </div>
                 <div class="left-content3">
@@ -458,7 +458,7 @@
                 <div class="right-content3">
                     <!-- img -->
                     <div class="right-img">
-                        <img src="assets/img/education.png" alt="">
+                        <img src="assets/img/maandeeq.png" alt="">
                     </div>
                 </div>
                 <div class="left-content3">
@@ -525,7 +525,7 @@
                 <div class="right-content3">
                     <!-- img -->
                     <div class="right-img">
-                        <img src="assets/img/education.png" alt="">
+                        <img src="assets/img/maandeeq.png" alt="">
                     </div>
                 </div>
                 <div class="left-content3">
