--- a/services.html
+++ b/services.html
@@ -764,7 +764,7 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                             <h2>ARABIC</h2>
-                            <h2>EDUCATION</h2>
+                            <h2>APPLICATIONS</h2>
                         </div>
                     </div>
                 </div>
@@ -1642,7 +1642,7 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                             <h2>ENGLISH</h2>
-                            <h2>EDUCATION</h2>
+                            <h2>APPLICATIONS</h2>
                         </div>
                     </div>
                 </div>
