--- a/english_services.html
+++ b/english_services.html
@@ -324,8 +324,8 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
-                            <h2>EXAMINATIONAL</h2>
-                            <h2>SERVICES</h2>
+                            <h2>MONTHLY</h2>
+                            <h2>EXAMINATIONS</h2>
                         </div>
                     </div>
                 </div>
@@ -763,8 +763,8 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
-                            <h2>EDUCATIONAL</h2>
-                            <h2>SERVICES</h2>
+                            <h2>MONTHLY</h2>
+                            <h2>APPLICATIONS</h2>
                         </div>
                     </div>
                 </div>
@@ -1202,8 +1202,8 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
-                            <h2>EXAMINATIONAL</h2>
-                            <h2>PRODUCTS</h2>
+                            <h2>YEARLY</h2>
+                            <h2>EXAMINATIONS</h2>
                         </div>
                     </div>
                 </div>
@@ -1221,7 +1221,7 @@
                                     Online systems are the best tool to manage educational institutions efficiently and effectively.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
-                                    <div class="restaurant-name">
+                                    EXAMINATIONAL<div class="restaurant-name">
                                         <!-- <div class="rating">
                                             <i class="fas fa-star"></i>
                                             <i class="fas fa-star"></i>
@@ -1641,8 +1641,8 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
-                            <h2>EDUCATIONAL</h2>
-                            <h2>PRODUCTS</h2>
+                            <h2>YEARLY</h2>
+                            <h2>APPLICATIONS</h2>
                         </div>
                     </div>
                 </div>
