--- a/archives.html
+++ b/archives.html
@@ -324,7 +324,8 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
-                            <h2>ARABIC DOWNLOADS</h2>
+                            <h2>ARABIC</h2>
+                            <h2>DOWNLOADS</h2>
                         </div>
                     </div>
                 </div>
@@ -333,7 +334,7 @@
                     <div class="properties pb-20">
                         <div class="properties__card">
                             <div class="properties__img ">
-                                <a href="#"><img src="assets/img/Laptop.png" alt=""></a>
+                                <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
                                 <p>ARABIC SYSTEMS</p>
@@ -366,7 +367,7 @@
                     <div class="properties pb-20">
                         <div class="properties__card">
                             <div class="properties__img ">
-                                <a href="#"><img src="assets/img/Laptop.png" alt=""></a>
+                                <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
                                 <p>ARABIC SYSTEMS</p>
@@ -398,7 +399,7 @@
                     <div class="properties pb-20">
                         <div class="properties__card">
                             <div class="properties__img ">
-                                <a href="#"><img src="assets/img/Laptop.png" alt=""></a>
+                                <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
                                 <p>ARABIC SYSTEMS</p>
@@ -431,7 +432,7 @@
                     <div class="properties pb-20">
                         <div class="properties__card">
                             <div class="properties__img ">
-                                <a href="#"><img src="assets/img/Laptop.png" alt=""></a>
+                                <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
                                 <p>ARABIC SYSTEMS</p>
@@ -464,7 +465,7 @@
                      <div class="properties pb-20">
                         <div class="properties__card">
                             <div class="properties__img ">
-                                <a href="#"><img src="assets/img/Laptop.png" alt=""></a>
+                                <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
                                 <p>ARABIC SYSTEMS</p>
@@ -497,7 +498,7 @@
                     <div class="properties pb-20">
                         <div class="properties__card">
                             <div class="properties__img ">
-                                <a href="#"><img src="assets/img/Laptop.png" alt=""></a>
+                                <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
                                 <p>ARABIC SYSTEMS</p>
@@ -529,7 +530,7 @@
                     <div class="properties pb-20">
                         <div class="properties__card">
                             <div class="properties__img ">
-                                <a href="#"><img src="assets/img/Laptop.png" alt=""></a>
+                                <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
                                 <p>ARABIC SYSTEMS</p>
@@ -562,7 +563,7 @@
                     <div class="properties pb-20">
                         <div class="properties__card">
                             <div class="properties__img ">
-                                <a href="#"><img src="assets/img/Laptop.png" alt=""></a>
+                                <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
                                 <p>ARABIC SYSTEMS</p>
@@ -594,7 +595,7 @@
                     <div class="properties pb-20">
                         <div class="properties__card">
                             <div class="properties__img ">
-                                <a href="#"><img src="assets/img/Laptop.png" alt=""></a>
+                                <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
                                 <p>ARABIC SYSTEMS</p>
@@ -627,7 +628,7 @@
                     <div class="properties pb-20">
                         <div class="properties__card">
                             <div class="properties__img ">
-                                <a href="#"><img src="assets/img/Laptop.png" alt=""></a>
+                                <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
                                 <p>ARABIC SYSTEMS</p>
@@ -659,7 +660,7 @@
                     <div class="properties pb-20">
                         <div class="properties__card">
                             <div class="properties__img ">
-                                <a href="#"><img src="assets/img/Laptop.png" alt=""></a>
+                                <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
                                 <p>ARABIC SYSTEMS</p>
@@ -692,7 +693,7 @@
                     <div class="properties pb-20">
                         <div class="properties__card">
                             <div class="properties__img ">
-                                <a href="#"><img src="assets/img/Laptop.png" alt=""></a>
+                                <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
                                 <p>ARABIC SYSTEMS</p>
@@ -724,7 +725,7 @@
                     <div class="properties pb-20">
                         <div class="properties__card">
                             <div class="properties__img ">
-                                <a href="#"><img src="assets/img/Laptop.png" alt=""></a>
+                                <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
                                 <p>ARABIC SYSTEMS</p>
@@ -760,7 +761,8 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
-                            <h2>ENGLISH DOWNLOADS</h2>
+                             <h2>ENGLISH</h2>
+                            <h2>DOWNLOADS</h2>
                         </div>
                     </div>
                 </div>
@@ -769,7 +771,7 @@
                     <div class="properties pb-20">
                         <div class="properties__card">
                             <div class="properties__img ">
-                                <a href="#"><img src="assets/img/Laptop.png" alt=""></a>
+                                <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
                                 <p>ENGLISH SYSTEMS</p>
@@ -802,7 +804,7 @@
                     <div class="properties pb-20">
                         <div class="properties__card">
                             <div class="properties__img ">
-                                <a href="#"><img src="assets/img/Laptop.png" alt=""></a>
+                                <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
                                 <p>ENGLISH SYSTEMS</p>
@@ -834,7 +836,7 @@
                     <div class="properties pb-20">
                         <div class="properties__card">
                             <div class="properties__img ">
-                                <a href="#"><img src="assets/img/Laptop.png" alt=""></a>
+                                <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
                                 <p>ENGLISH SYSTEMS</p>
@@ -867,7 +869,7 @@
                     <div class="properties pb-20">
                         <div class="properties__card">
                             <div class="properties__img ">
-                                <a href="#"><img src="assets/img/Laptop.png" alt=""></a>
+                                <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
                                 <p>ENGLISH SYSTEMS</p>
@@ -900,7 +902,7 @@
                      <div class="properties pb-20">
                         <div class="properties__card">
                             <div class="properties__img ">
-                                <a href="#"><img src="assets/img/Laptop.png" alt=""></a>
+                                <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
                                 <p>ENGLISH SYSTEMS</p>
@@ -933,7 +935,7 @@
                     <div class="properties pb-20">
                         <div class="properties__card">
                             <div class="properties__img ">
-                                <a href="#"><img src="assets/img/Laptop.png" alt=""></a>
+                                <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
                                 <p>ENGLISH SYSTEMS</p>
@@ -965,7 +967,7 @@
                     <div class="properties pb-20">
                         <div class="properties__card">
                             <div class="properties__img ">
-                                <a href="#"><img src="assets/img/Laptop.png" alt=""></a>
+                                <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
                                 <p>ENGLISH SYSTEMS</p>
@@ -998,7 +1000,7 @@
                     <div class="properties pb-20">
                         <div class="properties__card">
                             <div class="properties__img ">
-                                <a href="#"><img src="assets/img/Laptop.png" alt=""></a>
+                                <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
                                 <p>ENGLISH SYSTEMS</p>
@@ -1030,7 +1032,7 @@
                     <div class="properties pb-20">
                         <div class="properties__card">
                             <div class="properties__img ">
-                                <a href="#"><img src="assets/img/Laptop.png" alt=""></a>
+                                <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
                                 <p>ENGLISH SYSTEMS</p>
@@ -1063,7 +1065,7 @@
                     <div class="properties pb-20">
                         <div class="properties__card">
                             <div class="properties__img ">
-                                <a href="#"><img src="assets/img/Laptop.png" alt=""></a>
+                                <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
                                 <p>ENGLISH SYSTEMS</p>
@@ -1095,7 +1097,7 @@
                     <div class="properties pb-20">
                         <div class="properties__card">
                             <div class="properties__img ">
-                                <a href="#"><img src="assets/img/Laptop.png" alt=""></a>
+                                <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
                                 <p>ENGLISH SYSTEMS</p>
@@ -1128,7 +1130,7 @@
                     <div class="properties pb-20">
                         <div class="properties__card">
                             <div class="properties__img ">
-                                <a href="#"><img src="assets/img/Laptop.png" alt=""></a>
+                                <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
                                 <p>ENGLISH SYSTEMS</p>
@@ -1160,7 +1162,7 @@
                     <div class="properties pb-20">
                         <div class="properties__card">
                             <div class="properties__img ">
-                                <a href="#"><img src="assets/img/Laptop.png" alt=""></a>
+                                <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
                                 <p>ENGLISH SYSTEMS</p>
