--- a/english_archives.html
+++ b/english_archives.html
@@ -324,7 +324,8 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
-                            <h2>ENGLISH VERSIONS</h2>
+                             <h2>ENGLISH</h2>
+                            <h2>DOWNLOADS</h2>
                         </div>
                     </div>
                 </div>
@@ -333,7 +334,7 @@
                         <div class="properties properties2 mb-30">
                             <div class="properties__card">
                                 <div class="properties__img">
-                                    <a href="#"><img src="assets/img/Laptop.png" alt=""></a>
+                                    <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
                                 <p>SCHOOLS VERSIONS</p>
@@ -365,7 +366,7 @@
                         <div class="properties properties2 mb-30">
                             <div class="properties__card">
                                 <div class="properties__img">
-                                    <a href="#"><img src="assets/img/Laptop.png" alt=""></a>
+                                    <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
                                     <p>SCHOOLS VERSIONS</p>
@@ -398,7 +399,7 @@
                         <div class="properties properties2 mb-30">
                             <div class="properties__card">
                                 <div class="properties__img">
-                                    <a href="#"><img src="assets/img/Laptop.png" alt=""></a>
+                                    <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
                                     <p>SCHOOLS VERSIONS</p>
@@ -431,7 +432,7 @@
                         <div class="properties properties2 mb-30">
                             <div class="properties__card">
                                 <div class="properties__img">
-                                    <a href="#"><img src="assets/img/Laptop.png" alt=""></a>
+                                    <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
                                     <p>SCHOOLS VERSIONS</p>
@@ -464,7 +465,7 @@
                         <div class="properties properties2 mb-30">
                             <div class="properties__card">
                                 <div class="properties__img">
-                                    <a href="#"><img src="assets/img/Laptop.png" alt=""></a>
+                                    <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
                                     <p>SCHOOLS VERSIONS</p>
@@ -497,7 +498,7 @@
                         <div class="properties properties2 mb-30">
                             <div class="properties__card">
                                 <div class="properties__img">
-                                    <a href="#"><img src="assets/img/Laptop.png" alt=""></a>
+                                    <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
                                     <p>SCHOOLS VERSIONS</p>
@@ -529,7 +530,7 @@
                         <div class="properties properties2 mb-30">
                             <div class="properties__card">
                                 <div class="properties__img">
-                                    <a href="#"><img src="assets/img/Laptop.png" alt=""></a>
+                                    <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
                                     <p>SCHOOLS VERSIONS</p>
@@ -561,7 +562,7 @@
                         <div class="properties properties2 mb-30">
                             <div class="properties__card">
                                 <div class="properties__img">
-                                    <a href="#"><img src="assets/img/Laptop.png" alt=""></a>
+                                    <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
                                     <p>SCHOOLS VERSIONS</p>
@@ -594,7 +595,7 @@
                         <div class="properties properties2 mb-30">
                             <div class="properties__card">
                                 <div class="properties__img">
-                                    <a href="#"><img src="assets/img/Laptop.png" alt=""></a>
+                                    <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
                                     <p>SCHOOLS VERSIONS</p>
@@ -627,7 +628,7 @@
                         <div class="properties properties2 mb-30">
                             <div class="properties__card">
                                 <div class="properties__img">
-                                    <a href="#"><img src="assets/img/Laptop.png" alt=""></a>
+                                    <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
                                     <p>SCHOOLS VERSIONS</p>
@@ -660,7 +661,7 @@
                         <div class="properties properties2 mb-30">
                             <div class="properties__card">
                                 <div class="properties__img">
-                                    <a href="#"><img src="assets/img/Laptop.png" alt=""></a>
+                                    <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
                                     <p>INSTITUTES VERSIONS</p>
@@ -693,7 +694,7 @@
                         <div class="properties properties2 mb-30">
                             <div class="properties__card">
                                 <div class="properties__img">
-                                    <a href="#"><img src="assets/img/Laptop.png" alt=""></a>
+                                    <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
                                     <p>UNIVERSITIES VERSIONS</p>
