--- a/english_systems.html
+++ b/english_systems.html
@@ -337,12 +337,12 @@
                     <table id="example" class="table is-striped" style="width:100%">
                         <thead>
                             <tr>
-                                <th>Institutions</th>
-                                <th>Region</th>
-                                <th>City</th>
-                                <th>District</th>
-                                <th>Type</th>
-                                <th>Status</th>
+                               <th>INSTITUTION</th>
+                                <th>REGION</th>
+                                <th>CITY</th>
+                                <th>DISTRICT</th>
+                                <th>TYPE</th>
+                                <th>STATUS</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -805,12 +805,12 @@
                         </tbody>
                         <tfoot>
                             <tr>
-                                <th>Name</th>
-                                <th>Position</th>
-                                <th>Office</th>
-                                <th>Age</th>
-                                <th>Start date</th>
-                                <th>Salary</th>
+                                <th>INSTITUTION</th>
+                                <th>REGION</th>
+                                <th>CITY</th>
+                                <th>DISTRICT</th>
+                                <th>TYPE</th>
+                                <th>STATUS</th>
                             </tr>
                         </tfoot>
                     </table>
