--- a/institutes_services.html
+++ b/institutes_services.html
@@ -336,15 +336,15 @@
 
             <div class="container">
                 <div style="overflow-x:auto;">
-                    <table id="example" class="table is-striped" style="width:100%">
+                   <table id="example" class="table is-striped" style="width:100%">
                         <thead>
                             <tr>
-                                <th>Institutions</th>
-                                <th>Region</th>
-                                <th>City</th>
-                                <th>District</th>
-                                <th>Type</th>
-                                <th>Status</th>
+                                <th>INSTITUTION</th>
+                                <th>REGION</th>
+                                <th>CITY</th>
+                                <th>DISTRICT</th>
+                                <th>TYPE</th>
+                                <th>STATUS</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -807,12 +807,12 @@
                         </tbody>
                         <tfoot>
                             <tr>
-                                <th>Name</th>
-                                <th>Position</th>
-                                <th>Office</th>
-                                <th>Age</th>
-                                <th>Start date</th>
-                                <th>Salary</th>
+                                <th>INSTITUTION</th>
+                                <th>REGION</th>
+                                <th>CITY</th>
+                                <th>DISTRICT</th>
+                                <th>TYPE</th>
+                                <th>STATUS</th>
                             </tr>
                         </tfoot>
                     </table>
