--- a/english_exams.html
+++ b/english_exams.html
@@ -119,7 +119,7 @@
         </div>
         <!-- Header End -->
     </header>
-    <main>
+    <main class="table-success">
         <!--? slider Area Start-->
         <section class="slider-area ">
             <div class="slider-active">
