--- a/english_home.html
+++ b/english_home.html
@@ -121,7 +121,7 @@
         </div>
         <!-- Header End -->
     </header>
-    <main>
+    <main class="table-success">
         <!--? slider Area Start-->
         <section class="slider-area ">
             <div class="slider-active">
