--- a/institutes_supervisors.html
+++ b/institutes_supervisors.html
@@ -122,7 +122,7 @@
         </div>
         <!-- Header End -->
     </header>
-    <main>
+   <main class="table-success">
         <!--? slider Area Start-->
         <section class="slider-area ">
             <div class="slider-active">
@@ -336,8 +336,8 @@
 
             <div class="container">
                 <div style="overflow-x:auto;">
-                   <table id="example" class="table is-striped" style="width:100%">
-                        <thead>
+                   <table id="example" class="display table-primary " style="width:100%">
+                        <thead class="table-primary">
                             <tr>
                                 <th>INSTITUTION</th>
                                 <th>REGION</th>
