--- a/contactus.html
+++ b/contactus.html
@@ -371,7 +371,7 @@
                 </script>
                 
             </div>
-            <div class="row ">
+            <div class="row table-success ">
                 <div class="col-12">
                     <h2 class="contact-title"> Message:</h2>
                 </div>
