--- a/contactus.html
+++ b/contactus.html
@@ -326,7 +326,7 @@
     </main>
 
     <!-- Header End -->
-<main class="container">
+<main class="container table-success ">
     <!--? slider Area Start-->
 
     <!--?  Contact Area start  -->
@@ -371,7 +371,7 @@
                 </script>
                 
             </div>
-            <div class="row table-success ">
+            <div class="row ">
                 <div class="col-12">
                     <h2 class="contact-title"> Message:</h2>
                 </div>
