--- a/contactus.html
+++ b/contactus.html
@@ -318,7 +318,7 @@
      
          <!--?  Contact Area start  -->
     <section class="contact-section">
-        <div class="container">
+        <div class="container-fluid">
          
                 <script>
                     function initMap() {
