--- a/contactus.html
+++ b/contactus.html
@@ -327,7 +327,7 @@
     <main>
            <!--?  Contact Area start  -->
     <section class="contact-section">
-        <div class="container-fluid">
+        <div class="container">
          
                 <script>
                     function initMap() {
