--- a/contactus.html
+++ b/contactus.html
@@ -327,7 +327,7 @@
       
         
     </main>
-    <main>
+    <main class="table-success">
            <!--?  Contact Area start  -->
     <section class="contact-section">
         <div class="container">
