--- a/contactus.html
+++ b/contactus.html
@@ -119,7 +119,7 @@
         </div>
         <!-- Header End -->
     </header>
-    <main class="table-primary">
+    <main class="table-active">
         <!--? slider Area Start-->
         <section class="slider-area ">
             <div class="slider-active">
@@ -327,7 +327,7 @@
       
         
     </main>
-    <main class="table-primary">
+    <main class="table-active">
            <!--?  Contact Area start  -->
     <section class="contact-section">
         <div class="container">
