--- a/contactus.html
+++ b/contactus.html
@@ -24,7 +24,12 @@
     <link rel="stylesheet" href="assets/css/slick.css">
     <link rel="stylesheet" href="assets/css/nice-select.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    
+    <style>
+        input::placeholder{
+            color: red;
+            font-weight: bold;
+        }
+    </style>
 </head>
 
 <body>
