--- a/contactus.html
+++ b/contactus.html
@@ -413,28 +413,28 @@
                         <span class="contact-info__icon"><i class="ti-home"></i></span>
                         <div class="media-body">
                             <h3> LOCATION ADDRESS:</h3>
-                            <p>Somalia,Hargeisa,Xawaadle</p>
+                            <h3>Somalia,Hargeisa,Xawaadle</h3>
                         </div>
                     </div>
                     <div class="media contact-info">
                         <span class="contact-info__icon"><i class="ti-email"></i></span>
                         <div class="media-body">
                             <h3> EMAIL ADDRESS:</h3>
-                            <p>maandeeqhome@gmail.com</p>
+                            <h3>contacts@maandeeq.com</h3>
                         </div>
                     </div>
                     <div class="media contact-info">
                         <span class="contact-info__icon"><i class="ti-mobile"></i></span>
                         <div class="media-body">
                             <h3>MOBILE E-DAHAB:</h3>
-                            <p>+252 65 6356654</p>
+                            <h3>+252 65 6356654</h3>
                         </div>
                     </div>
                     <div class="media contact-info">
                         <span class="contact-info__icon"><i class="ti-mobile"></i></span>
                         <div class="media-body">
                             <h3>MOBILE ZAAD:</h3>
-                            <p>+252 63 6356654</p>
+                            <h3>+252 63 6356654</h3>
                         </div>
                     </div>
                    
