--- a/contactus.html
+++ b/contactus.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <style>
         input::placeholder{
-            color: red;
+            color: rgb(14, 13, 13);
             font-weight: bold;
         }
     </style>
