--- a/contactus.html
+++ b/contactus.html
@@ -417,8 +417,8 @@
                     <div class="media contact-info">
                         <span class="contact-info__icon"><i class="ti-home"></i></span>
                         <div class="media-body ibrahim">
-                            <h3> LOCATION ADDRESS:</h3>
-                            <h3>Somalia,Hargeisa,Xawaadle</h3>
+                            <p> LOCATION ADDRESS:</p>
+                            <p>Somalia,Hargeisa,Xawaadle</p>
                         </div>
                     </div>
                     <div class="media contact-info">
