--- a/arabic_systems.html
+++ b/arabic_systems.html
@@ -334,8 +334,8 @@
 
             <div class="container">
                 <div style="overflow-x:auto;">
-                     <table id="example" class="display table-primary " style="width:100%">
-                        <thead class="table-primary">
+                     <table id="example" class="display table-dark " style="width:100%">
+                        <thead class="table-dark">
                             <tr>
                                 <th>INSTITUTION</th>
                                 <th>REGION</th>
