--- a/contactus.html
+++ b/contactus.html
@@ -482,7 +482,7 @@
                                    <a href="#"><i class="fab fa-github"></i></a>
                                    <a href="#"><i class="fab fa-telegram"></i></a>
                                    <a href="#"><i class="fab fa-whatsapp"></i></a>
-                                   <a href="#"><i class="fab fa-tiktok"></i></a>
+                                   <a href="#"><i class="fa-brands fa-tiktok"></i></a>
                                </div>
                            </div>
                        </div>
