--- a/arabic_systems.html
+++ b/arabic_systems.html
@@ -191,7 +191,131 @@
                     </div>
                 </div>
             </div>
-         
+            <div class="container">
+                <div class="row justify-content-sm-center">
+                    <div class="col-lg-4 col-md-6 col-sm-8">
+                        <div class="single-services mb-30">
+                            <div class="features-icon">
+                                <img src="assets/img/icon.svg" alt="">
+                            </div>
+                            <div class="features-caption" style="text-align: justify;">
+                                <h3>SECSS</h3>
+                                <p>
+                                    Online systems are the best tool to manage educational institutions efficiently and effectively.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-8">
+                        <div class="single-services mb-30">
+                            <div class="features-icon">
+                                <img src="assets/img/icon.svg" alt="">
+                            </div>
+                            <div class="features-caption" style="text-align: justify;">
+                                <h3>KGPRISS</h3>
+                                <p>
+                                    Online systems are the best tool to manage educational institutions efficiently and effectively.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-8">
+                        <div class="single-services mb-30">
+                            <div class="features-icon">
+                                <img src="assets/img/icon.svg" alt="">
+                            </div>
+                            <div class="features-caption" style="text-align: justify;">
+                                <h3>PRIPRESS</h3>
+                                <p>
+                                    Online systems are the best tool to manage educational institutions efficiently and effectively.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-8">
+                        <div class="single-services mb-30">
+                            <div class="features-icon">
+                                <img src="assets/img/icon.svg" alt="">
+                            </div>
+                            <div class="features-caption" style="text-align: justify;">
+                                <h3>PRESECSS</h3>
+                                <p>
+                                    Online systems are the best tool to manage educational institutions efficiently and effectively.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-8">
+                        <div class="single-services mb-30">
+                            <div class="features-icon">
+                                <img src="assets/img/icon.svg" alt="">
+                            </div>
+                            <div class="features-caption" style="text-align: justify;">
+                                <h3>KGPRIPRESS</h3>
+                                <p>
+                                    Online systems are the best tool to manage educational institutions efficiently and effectively.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-8">
+                        <div class="single-services mb-30">
+                            <div class="features-icon">
+                                <img src="assets/img/icon.svg" alt="">
+                            </div>
+                            <div class="features-caption" style="text-align: justify;">
+                                <h3>PRIPRESECSS</h3>
+                                <p>
+                                    Online systems are the best tool to manage educational institutions efficiently and effectively.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row justify-content-sm-center">
+                    <div class="col-lg-4 col-md-6 col-sm-8">
+                        <div class="single-services mb-30">
+                            <div class="features-icon">
+                                <img src="assets/img/icon.svg" alt="">
+                            </div>
+                            <div class="features-caption" style="text-align: justify;">
+                                <h3>KGPRIPRESECSS</h3>
+                                <p>
+                                    Online systems are the best tool to manage educational institutions efficiently and effectively.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-8">
+                        <div class="single-services mb-30">
+                            <div class="features-icon">
+                                <img src="assets/img/icon.svg" alt="">
+                            </div>
+                            <div class="features-caption" style="text-align: justify;">
+                                <h3>AIS</h3>
+                                <p>
+                                    Online systems are the best tool to manage educational institutions efficiently and effectively.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-8">
+                        <div class="single-services mb-30">
+                            <div class="features-icon">
+                                <img src="assets/img/icon.svg" alt="">
+                            </div>
+                            <div class="features-caption" style="text-align: justify;">
+                                <h3>AUS</h3>
+                                <p>
+                                    Online systems are the best tool to manage educational institutions efficiently and effectively.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <!-- Courses area start -->
 
