--- a/contactus.html
+++ b/contactus.html
@@ -141,8 +141,7 @@
                                 <div class="hero__caption">
                                      <h1 data-animation="fadeInLeft" data-delay="0.2s">INTEGRATED NATIONAL EDUCATIONAL <br> MANAGEMENT INFORMATION INSTITUTIONS</h1>
                                     <p data-animation="fadeInLeft" data-delay="0.4s" style="text-align: justify;">
-                                        Online systems are the best tool to manage educational
-                                        institutions efficiently and effectively.
+                                        
                                     </P>
                                     <!-- <a href="Request.html" class="btn hero-btn" data-animation="fadeInLeft" data-delay="0.7s">Request</a> -->
                                     <!-- <li class="button-header"><a href="Request.html" class="btn btn3">Request</a></li> -->
@@ -469,9 +468,7 @@
                                <div class="footer-tittle">
                                    <div class="footer-pera">
                                        <p data-animation="fadeInLeft" data-delay="0.4s" style="text-align: justify;font-size: medium;">
-                                           EMIS is the best tool to manage educational institutions
-                                           efficiently and effectively. EMIS provide quality education
-                                           system.
+                                           Online systems are the best tool to manage educational institutions efficiently and effectively.
                                        </p>
                                    </div>
                                </div>
