--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                     <div class="col-lg-4">
                         <div class="properties properties2 mb-30">
                             <div class="properties__card">
-                                <div class="properties__img overlay1">
+                                <div class="properties__img">
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
@@ -365,7 +365,7 @@
                     <div class="col-lg-4">
                         <div class="properties properties2 mb-30">
                             <div class="properties__card">
-                                <div class="properties__img overlay1">
+                                <div class="properties__img ">
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
@@ -398,7 +398,7 @@
                     <div class="col-lg-4">
                         <div class="properties properties2 mb-30">
                             <div class="properties__card">
-                                <div class="properties__img overlay1">
+                                <div class="properties__img ">
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
