--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <!-- ? services-area -->
         <div class="services-area">
             <div class="container">
-                <div class="row justify-content-sm-center overlay1">
+                <div class="row justify-content-sm-center ">
                     <div class="col-lg-4 col-md-6 col-sm-8">
                         <div class="single-services mb-30">
                             <div class="features-icon">
