--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>SCHOOLS SYSTEMS</p>
+                                <p>ACADEMIC SYSTEMS</p>
                                 <h3>KGSS</h3>
                                 <p style="text-align: justify;">
                                     Online systems are the best tool to manage educational institutions efficiently and effectively.
@@ -491,7 +491,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>SCHOOLS SYSTEMS</p>
+                                <p>ACADEMIC SYSTEMS</p>
                                 <h3>PRISS</h3>
                                 <p style="text-align: justify;">
                                     Online systems are the best tool to manage educational institutions efficiently and effectively.
@@ -523,7 +523,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>SCHOOLS SYSTEMS</p>
+                                <p>ACADEMIC SYSTEMS</p>
                                 <h3>PRESS</h3>
                                 <p style="text-align: justify;">
                                     Online systems are the best tool to manage educational institutions efficiently and effectively.
@@ -556,7 +556,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>SCHOOLS SYSTEMS</p>
+                                <p>ACADEMIC SYSTEMS</p>
                                 <h3>SECSS</h3>
                                 <p style="text-align: justify;">
                                     Online systems are the best tool to manage educational institutions efficiently and effectively.
@@ -589,7 +589,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>SCHOOLS SYSTEMS</p>
+                                <p>ACADEMIC SYSTEMS</p>
                                 <h3>KGPRISS</h3>
                                 <p style="text-align: justify;">
                                     Online systems are the best tool to manage educational institutions efficiently and effectively.
@@ -622,7 +622,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>SCHOOLS SYSTEMS</p>
+                                <p>ACADEMIC SYSTEMS</p>
                                 <h3>PRIPRESS</h3>
                                 <p style="text-align: justify;">
                                     Online systems are the best tool to manage educational institutions efficiently and effectively.
@@ -654,7 +654,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>SCHOOLS SYSTEMS</p>
+                                <p>ACADEMIC SYSTEMS</p>
                                 <h3>PRESECSS</h3>
                                 <p style="text-align: justify;">
                                     Online systems are the best tool to manage educational institutions efficiently and effectively.
@@ -687,7 +687,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>SCHOOLS SYSTEMS</p>
+                                <p>ACADEMIC SYSTEMS</p>
                                 <h3>KGPRIPRESS</h3>
                                 <p style="text-align: justify;">
                                     Online systems are the best tool to manage educational institutions efficiently and effectively.
@@ -719,7 +719,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>SCHOOLS SYSTEMS</p>
+                                <p>ACADEMIC SYSTEMS</p>
                                 <h3>PRIPRESECSS</h3>
                                 <p style="text-align: justify;">
                                     Online systems are the best tool to manage educational institutions efficiently and effectively.
@@ -752,7 +752,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>SCHOOLS SYSTEMS</p>
+                                <p>ACADEMIC SYSTEMS</p>
                                 <h3>KGPRIPRESECSS</h3>
                                 <p style="text-align: justify;">
                                     Online systems are the best tool to manage educational institutions efficiently and effectively.
@@ -784,7 +784,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>INSTITUTES SYSTEMS</p>
+                                <p>ACADEMIC SYSTEMS</p>
                                 <h3>AIS</h3>
                                 <p style="text-align: justify;">
                                     Online systems are the best tool to manage educational institutions efficiently and effectively.
@@ -817,7 +817,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>UNIVERSITIES SYSTEMS</p>
+                                <p>ACADEMIC SYSTEMS</p>
                                 <h3>AUS</h3>
                                 <p style="text-align: justify;">
                                     Online systems are the best tool to manage educational institutions efficiently and effectively.
@@ -849,7 +849,7 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>MINISTRY SYSTEMS</p>
+                                <p>ACADEMIC SYSTEMS</p>
                                 <h3>EMIS</h3>
                                 <p style="text-align: justify;">
                                     Online systems are the best tool to manage educational institutions efficiently and effectively.
