--- a/index.html
+++ b/index.html
@@ -962,8 +962,8 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                <p>ACADEMIC</p>
-                                <h3>SMART</h3>
+                                <p>SMART</p>
+                                <h3>UNIVERSITIES</h3>
                                 <p style="text-align: justify;">
                                     Online systems are the best tool to manage educational institutions efficiently and effectively.
                                 </p>
